--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "next": "15.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-lightgallery": "^0.9.0",
     "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
